--- a/tagebuch.ipynb
+++ b/tagebuch.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "75259635-d777-411e-91c6-8b649d2e3871",
    "metadata": {},
    "outputs": [],
@@ -49,6 +49,365 @@
    "metadata": {},
    "source": [
     "## 02.12 Offline Kalibrierung"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24ad0771-2f29-4a08-8890-6807f7ec79e3",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### Import data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "62110b84-557b-417e-998e-2b19bd3c896c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Frequency             Re(1ω)              Im(1ω)             Re(3ω)  \\\n",
+      "0    10.000  0.128168420396861  -0.000000000000004  0.001201514320429   \n",
+      "1    14.592  0.128929742917524   0.000000000000003  0.001113346330013   \n",
+      "2    21.294  0.129612913502709   0.000000000000004  0.001029477080947   \n",
+      "3    31.072  0.130401750345415   0.000000000000010  0.000950022228322   \n",
+      "4    45.342  0.130923792752236   0.000000000000005  0.000871625278675   \n",
+      "5    66.164  0.131501573258185  -0.000000000000018  0.000796766542770   \n",
+      "6    96.549  0.131855597866627   0.000000000000010  0.000723240231149   \n",
+      "7   140.887  0.132121031585632  -0.000000000000012  0.000650013159849   \n",
+      "8   205.587  0.132404500544174   0.000000000000039  0.000577341312168   \n",
+      "9   300.000  0.132491124737582   0.000000000000149  0.000507469009460   \n",
+      "\n",
+      "               Im(3ω)           Phase(1ω)            Phase(3ω)      Vref  \\\n",
+      "0  -0.000279804426717  -0.000000000001870  -13.109195621472953  0.099384   \n",
+      "1  -0.000277384384230   0.000000000001249  -13.990114035348618  0.099090   \n",
+      "2  -0.000275458954937   0.000000000001636  -14.979819379861420  0.098844   \n",
+      "3  -0.000273876427473   0.000000000004540  -16.081437325952354  0.098694   \n",
+      "4  -0.000271773873834   0.000000000002236  -17.317545171358915  0.098499   \n",
+      "5  -0.000270357226748  -0.000000000007992  -18.742999108909647  0.098368   \n",
+      "6  -0.000267692321052   0.000000000004210  -20.310984168378134  0.098208   \n",
+      "7  -0.000264381749779  -0.000000000005122  -22.133193942631220  0.098012   \n",
+      "8  -0.000260149654714   0.000000000017062  -24.256299136321825  0.097772   \n",
+      "9  -0.000254816879729   0.000000000064306  -26.662732169375502  0.097530   \n",
+      "\n",
+      "    Current    Re(ΔT) Δ[Re(ΔT)]     Im(ΔT) Δ[Im(ΔT)]     Power Temperature  \n",
+      "0  0.009938  1.889020  0.000000  -0.439908  0.002101  0.001274     -145.23  \n",
+      "1  0.009909  1.755598  0.000000  -0.437398  0.002089  0.001278     -144.34  \n",
+      "2  0.009884  1.627391  0.000000  -0.435444  0.002080  0.001281     -143.54  \n",
+      "3  0.009869  1.504062  0.000000  -0.433597  0.002071  0.001287     -142.76  \n",
+      "4  0.009850  1.382681  0.000000  -0.431122  0.002059  0.001290     -142.14  \n",
+      "5  0.009837  1.265610  0.000000  -0.429444  0.002051  0.001294     -141.55  \n",
+      "6  0.009821  1.150694  0.000000  -0.425905  0.002035  0.001295     -141.09  \n",
+      "7  0.009801  1.036261  0.000000  -0.421481  0.002014  0.001295     -140.67  \n",
+      "8  0.009777  0.922663  0.000000  -0.415751  0.001987  0.001295     -140.19  \n",
+      "9  0.009753  0.813010  0.000000  -0.408239  0.001951  0.001292     -139.86  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# File import\n",
+    "with open('testdata.txt', 'r') as file:\n",
+    "    lines = file.readlines()[0:]\n",
+    "\n",
+    "data = []\n",
+    "for line in lines:\n",
+    "    # Split\n",
+    "    parts = line.split()\n",
+    "    \n",
+    "    # Bye first column\n",
+    "    row = parts[2:]\n",
+    "    data.append(row)\n",
+    "\n",
+    "# Column names\n",
+    "columns = [\n",
+    "     \"Frequency\", \"Re(1ω)\", \"Im(1ω)\", \"Re(3ω)\", \"Im(3ω)\", \"Phase(1ω)\", \"Phase(3ω)\",\n",
+    "    \"Vref\", \"Current\", \"Re(ΔT)\", \"Δ[Re(ΔT)]\", \"Im(ΔT)\", \"Δ[Im(ΔT)]\", \"Power\", \"Temperature\"\n",
+    "]\n",
+    "\n",
+    "# DataFrame\n",
+    "df = pd.DataFrame(data, columns=columns)\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "b8975dfc-52d3-41bf-b1b6-946573ec9c95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Frequency</th>\n",
+       "      <th>Re(1ω)</th>\n",
+       "      <th>Im(1ω)</th>\n",
+       "      <th>Re(3ω)</th>\n",
+       "      <th>Im(3ω)</th>\n",
+       "      <th>Phase(1ω)</th>\n",
+       "      <th>Phase(3ω)</th>\n",
+       "      <th>Vref</th>\n",
+       "      <th>Current</th>\n",
+       "      <th>Re(ΔT)</th>\n",
+       "      <th>Δ[Re(ΔT)]</th>\n",
+       "      <th>Im(ΔT)</th>\n",
+       "      <th>Δ[Im(ΔT)]</th>\n",
+       "      <th>Power</th>\n",
+       "      <th>Temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10.000</td>\n",
+       "      <td>0.128168420396861</td>\n",
+       "      <td>-0.000000000000004</td>\n",
+       "      <td>0.001201514320429</td>\n",
+       "      <td>-0.000279804426717</td>\n",
+       "      <td>-0.000000000001870</td>\n",
+       "      <td>-13.109195621472953</td>\n",
+       "      <td>0.099384</td>\n",
+       "      <td>0.009938</td>\n",
+       "      <td>1.889020</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.439908</td>\n",
+       "      <td>0.002101</td>\n",
+       "      <td>0.001274</td>\n",
+       "      <td>-145.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14.592</td>\n",
+       "      <td>0.128929742917524</td>\n",
+       "      <td>0.000000000000003</td>\n",
+       "      <td>0.001113346330013</td>\n",
+       "      <td>-0.000277384384230</td>\n",
+       "      <td>0.000000000001249</td>\n",
+       "      <td>-13.990114035348618</td>\n",
+       "      <td>0.099090</td>\n",
+       "      <td>0.009909</td>\n",
+       "      <td>1.755598</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.437398</td>\n",
+       "      <td>0.002089</td>\n",
+       "      <td>0.001278</td>\n",
+       "      <td>-144.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>21.294</td>\n",
+       "      <td>0.129612913502709</td>\n",
+       "      <td>0.000000000000004</td>\n",
+       "      <td>0.001029477080947</td>\n",
+       "      <td>-0.000275458954937</td>\n",
+       "      <td>0.000000000001636</td>\n",
+       "      <td>-14.979819379861420</td>\n",
+       "      <td>0.098844</td>\n",
+       "      <td>0.009884</td>\n",
+       "      <td>1.627391</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.435444</td>\n",
+       "      <td>0.002080</td>\n",
+       "      <td>0.001281</td>\n",
+       "      <td>-143.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>31.072</td>\n",
+       "      <td>0.130401750345415</td>\n",
+       "      <td>0.000000000000010</td>\n",
+       "      <td>0.000950022228322</td>\n",
+       "      <td>-0.000273876427473</td>\n",
+       "      <td>0.000000000004540</td>\n",
+       "      <td>-16.081437325952354</td>\n",
+       "      <td>0.098694</td>\n",
+       "      <td>0.009869</td>\n",
+       "      <td>1.504062</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.433597</td>\n",
+       "      <td>0.002071</td>\n",
+       "      <td>0.001287</td>\n",
+       "      <td>-142.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>45.342</td>\n",
+       "      <td>0.130923792752236</td>\n",
+       "      <td>0.000000000000005</td>\n",
+       "      <td>0.000871625278675</td>\n",
+       "      <td>-0.000271773873834</td>\n",
+       "      <td>0.000000000002236</td>\n",
+       "      <td>-17.317545171358915</td>\n",
+       "      <td>0.098499</td>\n",
+       "      <td>0.009850</td>\n",
+       "      <td>1.382681</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.431122</td>\n",
+       "      <td>0.002059</td>\n",
+       "      <td>0.001290</td>\n",
+       "      <td>-142.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>66.164</td>\n",
+       "      <td>0.131501573258185</td>\n",
+       "      <td>-0.000000000000018</td>\n",
+       "      <td>0.000796766542770</td>\n",
+       "      <td>-0.000270357226748</td>\n",
+       "      <td>-0.000000000007992</td>\n",
+       "      <td>-18.742999108909647</td>\n",
+       "      <td>0.098368</td>\n",
+       "      <td>0.009837</td>\n",
+       "      <td>1.265610</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.429444</td>\n",
+       "      <td>0.002051</td>\n",
+       "      <td>0.001294</td>\n",
+       "      <td>-141.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>96.549</td>\n",
+       "      <td>0.131855597866627</td>\n",
+       "      <td>0.000000000000010</td>\n",
+       "      <td>0.000723240231149</td>\n",
+       "      <td>-0.000267692321052</td>\n",
+       "      <td>0.000000000004210</td>\n",
+       "      <td>-20.310984168378134</td>\n",
+       "      <td>0.098208</td>\n",
+       "      <td>0.009821</td>\n",
+       "      <td>1.150694</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.425905</td>\n",
+       "      <td>0.002035</td>\n",
+       "      <td>0.001295</td>\n",
+       "      <td>-141.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>140.887</td>\n",
+       "      <td>0.132121031585632</td>\n",
+       "      <td>-0.000000000000012</td>\n",
+       "      <td>0.000650013159849</td>\n",
+       "      <td>-0.000264381749779</td>\n",
+       "      <td>-0.000000000005122</td>\n",
+       "      <td>-22.133193942631220</td>\n",
+       "      <td>0.098012</td>\n",
+       "      <td>0.009801</td>\n",
+       "      <td>1.036261</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.421481</td>\n",
+       "      <td>0.002014</td>\n",
+       "      <td>0.001295</td>\n",
+       "      <td>-140.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>205.587</td>\n",
+       "      <td>0.132404500544174</td>\n",
+       "      <td>0.000000000000039</td>\n",
+       "      <td>0.000577341312168</td>\n",
+       "      <td>-0.000260149654714</td>\n",
+       "      <td>0.000000000017062</td>\n",
+       "      <td>-24.256299136321825</td>\n",
+       "      <td>0.097772</td>\n",
+       "      <td>0.009777</td>\n",
+       "      <td>0.922663</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.415751</td>\n",
+       "      <td>0.001987</td>\n",
+       "      <td>0.001295</td>\n",
+       "      <td>-140.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>300.000</td>\n",
+       "      <td>0.132491124737582</td>\n",
+       "      <td>0.000000000000149</td>\n",
+       "      <td>0.000507469009460</td>\n",
+       "      <td>-0.000254816879729</td>\n",
+       "      <td>0.000000000064306</td>\n",
+       "      <td>-26.662732169375502</td>\n",
+       "      <td>0.097530</td>\n",
+       "      <td>0.009753</td>\n",
+       "      <td>0.813010</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.408239</td>\n",
+       "      <td>0.001951</td>\n",
+       "      <td>0.001292</td>\n",
+       "      <td>-139.86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Frequency             Re(1ω)              Im(1ω)             Re(3ω)  \\\n",
+       "0    10.000  0.128168420396861  -0.000000000000004  0.001201514320429   \n",
+       "1    14.592  0.128929742917524   0.000000000000003  0.001113346330013   \n",
+       "2    21.294  0.129612913502709   0.000000000000004  0.001029477080947   \n",
+       "3    31.072  0.130401750345415   0.000000000000010  0.000950022228322   \n",
+       "4    45.342  0.130923792752236   0.000000000000005  0.000871625278675   \n",
+       "5    66.164  0.131501573258185  -0.000000000000018  0.000796766542770   \n",
+       "6    96.549  0.131855597866627   0.000000000000010  0.000723240231149   \n",
+       "7   140.887  0.132121031585632  -0.000000000000012  0.000650013159849   \n",
+       "8   205.587  0.132404500544174   0.000000000000039  0.000577341312168   \n",
+       "9   300.000  0.132491124737582   0.000000000000149  0.000507469009460   \n",
+       "\n",
+       "               Im(3ω)           Phase(1ω)            Phase(3ω)      Vref  \\\n",
+       "0  -0.000279804426717  -0.000000000001870  -13.109195621472953  0.099384   \n",
+       "1  -0.000277384384230   0.000000000001249  -13.990114035348618  0.099090   \n",
+       "2  -0.000275458954937   0.000000000001636  -14.979819379861420  0.098844   \n",
+       "3  -0.000273876427473   0.000000000004540  -16.081437325952354  0.098694   \n",
+       "4  -0.000271773873834   0.000000000002236  -17.317545171358915  0.098499   \n",
+       "5  -0.000270357226748  -0.000000000007992  -18.742999108909647  0.098368   \n",
+       "6  -0.000267692321052   0.000000000004210  -20.310984168378134  0.098208   \n",
+       "7  -0.000264381749779  -0.000000000005122  -22.133193942631220  0.098012   \n",
+       "8  -0.000260149654714   0.000000000017062  -24.256299136321825  0.097772   \n",
+       "9  -0.000254816879729   0.000000000064306  -26.662732169375502  0.097530   \n",
+       "\n",
+       "    Current    Re(ΔT) Δ[Re(ΔT)]     Im(ΔT) Δ[Im(ΔT)]     Power Temperature  \n",
+       "0  0.009938  1.889020  0.000000  -0.439908  0.002101  0.001274     -145.23  \n",
+       "1  0.009909  1.755598  0.000000  -0.437398  0.002089  0.001278     -144.34  \n",
+       "2  0.009884  1.627391  0.000000  -0.435444  0.002080  0.001281     -143.54  \n",
+       "3  0.009869  1.504062  0.000000  -0.433597  0.002071  0.001287     -142.76  \n",
+       "4  0.009850  1.382681  0.000000  -0.431122  0.002059  0.001290     -142.14  \n",
+       "5  0.009837  1.265610  0.000000  -0.429444  0.002051  0.001294     -141.55  \n",
+       "6  0.009821  1.150694  0.000000  -0.425905  0.002035  0.001295     -141.09  \n",
+       "7  0.009801  1.036261  0.000000  -0.421481  0.002014  0.001295     -140.67  \n",
+       "8  0.009777  0.922663  0.000000  -0.415751  0.001987  0.001295     -140.19  \n",
+       "9  0.009753  0.813010  0.000000  -0.408239  0.001951  0.001292     -139.86  "
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
@@ -119,12 +478,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "524a0ad9-dffd-45f8-b692-b6c2673f6f4b",
+   "cell_type": "markdown",
+   "id": "9cb0057c-b5fb-4569-9ef7-408f361be15f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## "
+   ]
   }
  ],
  "metadata": {
