dR/dT Berechnung in Arbeit

--- a/tagebuch.ipynb
+++ b/tagebuch.ipynb
@@ -54,9 +54,7 @@
   {
    "cell_type": "markdown",
    "id": "24ad0771-2f29-4a08-8890-6807f7ec79e3",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Import data"
    ]
@@ -482,8 +480,82 @@
    "id": "9cb0057c-b5fb-4569-9ef7-408f361be15f",
    "metadata": {},
    "source": [
-    "## "
+    "### dR/dT Berechnung (unter Cryo)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de134b31-2608-499d-a043-e708e440f3ad",
+   "metadata": {},
+   "source": [
+    "#### Substrate thermal conductivity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a479ef2e-5f25-4a60-a8a0-9e98d9b60215",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fc418ad-e22d-4838-96a9-c791deab2731",
+   "metadata": {},
+   "source": [
+    "#### Slope dRe(V3w)/dln(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "712ac750-3a84-4a5c-a491-89c07bbdde9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    0.001201514320429\n",
+      "1    0.001113346330013\n",
+      "2    0.001029477080947\n",
+      "3    0.000950022228322\n",
+      "4    0.000871625278675\n",
+      "5    0.000796766542770\n",
+      "6    0.000723240231149\n",
+      "7    0.000650013159849\n",
+      "8    0.000577341312168\n",
+      "9    0.000507469009460\n",
+      "Name: Re(3ω), dtype: object\n",
+      "0     10.000\n",
+      "1     14.592\n",
+      "2     21.294\n",
+      "3     31.072\n",
+      "4     45.342\n",
+      "5     66.164\n",
+      "6     96.549\n",
+      "7    140.887\n",
+      "8    205.587\n",
+      "9    300.000\n",
+      "Name: Frequency, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "v3w=df['Re(3ω)']\n",
+    "f=df['Frequency']\n",
+    "print(v3w)\n",
+    "print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "534e0809-9721-4a76-a07e-95cd5e66bce5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
