test data in Arbeit

--- a/tagebuch.ipynb
+++ b/tagebuch.ipynb
@@ -48,7 +48,9 @@
   {
    "cell_type": "markdown",
    "id": "3584579e-7ef8-40af-b9a2-5d8038adc7d3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 02.12 -03.12 Offline Kalibrierung"
    ]
