Kalibrierung mit Grease

--- a/tagebuch.ipynb
+++ b/tagebuch.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "3310c0cd-13de-4801-aa21-de2b8702d968",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Preamble"
    ]
@@ -39,7 +41,9 @@
   {
    "cell_type": "markdown",
    "id": "3584579e-7ef8-40af-b9a2-5d8038adc7d3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 02.12 -03.12 Offline Kalibrierung"
    ]
@@ -762,7 +766,9 @@
   {
    "cell_type": "markdown",
    "id": "1f89e954-df84-42ff-96b9-75a13931fb1e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 03.12 Messungtest"
    ]
@@ -777,49 +783,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "id": "422956b7-be55-4af5-8673-8b58182083d0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Frequency             Re(1ω)              Im(1ω)             Re(3ω)  \\\n",
-      "0    10.000  0.128168420396861  -0.000000000000004  0.001201514320429   \n",
-      "1    14.592  0.128929742917524   0.000000000000003  0.001113346330013   \n",
-      "2    21.294  0.129612913502709   0.000000000000004  0.001029477080947   \n",
-      "3    31.072  0.130401750345415   0.000000000000010  0.000950022228322   \n",
-      "4    45.342  0.130923792752236   0.000000000000005  0.000871625278675   \n",
-      "5    66.164  0.131501573258185  -0.000000000000018  0.000796766542770   \n",
-      "6    96.549  0.131855597866627   0.000000000000010  0.000723240231149   \n",
-      "7   140.887  0.132121031585632  -0.000000000000012  0.000650013159849   \n",
-      "8   205.587  0.132404500544174   0.000000000000039  0.000577341312168   \n",
-      "9   300.000  0.132491124737582   0.000000000000149  0.000507469009460   \n",
-      "\n",
-      "               Im(3ω)           Phase(1ω)            Phase(3ω)      Vref  \\\n",
-      "0  -0.000279804426717  -0.000000000001870  -13.109195621472953  0.099384   \n",
-      "1  -0.000277384384230   0.000000000001249  -13.990114035348618  0.099090   \n",
-      "2  -0.000275458954937   0.000000000001636  -14.979819379861420  0.098844   \n",
-      "3  -0.000273876427473   0.000000000004540  -16.081437325952354  0.098694   \n",
-      "4  -0.000271773873834   0.000000000002236  -17.317545171358915  0.098499   \n",
-      "5  -0.000270357226748  -0.000000000007992  -18.742999108909647  0.098368   \n",
-      "6  -0.000267692321052   0.000000000004210  -20.310984168378134  0.098208   \n",
-      "7  -0.000264381749779  -0.000000000005122  -22.133193942631220  0.098012   \n",
-      "8  -0.000260149654714   0.000000000017062  -24.256299136321825  0.097772   \n",
-      "9  -0.000254816879729   0.000000000064306  -26.662732169375502  0.097530   \n",
-      "\n",
-      "    Current    Re(ΔT) Δ[Re(ΔT)]     Im(ΔT) Δ[Im(ΔT)]     Power Temperature  \n",
-      "0  0.009938  1.889020  0.000000  -0.439908  0.002101  0.001274     -145.23  \n",
-      "1  0.009909  1.755598  0.000000  -0.437398  0.002089  0.001278     -144.34  \n",
-      "2  0.009884  1.627391  0.000000  -0.435444  0.002080  0.001281     -143.54  \n",
-      "3  0.009869  1.504062  0.000000  -0.433597  0.002071  0.001287     -142.76  \n",
-      "4  0.009850  1.382681  0.000000  -0.431122  0.002059  0.001290     -142.14  \n",
-      "5  0.009837  1.265610  0.000000  -0.429444  0.002051  0.001294     -141.55  \n",
-      "6  0.009821  1.150694  0.000000  -0.425905  0.002035  0.001295     -141.09  \n",
-      "7  0.009801  1.036261  0.000000  -0.421481  0.002014  0.001295     -140.67  \n",
-      "8  0.009777  0.922663  0.000000  -0.415751  0.001987  0.001295     -140.19  \n",
-      "9  0.009753  0.813010  0.000000  -0.408239  0.001951  0.001292     -139.86  \n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'testdata.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# File import\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtestdata.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m      3\u001b[0m     lines \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mreadlines()[\u001b[38;5;241m0\u001b[39m:]\n\u001b[0;32m      5\u001b[0m data_sample \u001b[38;5;241m=\u001b[39m []\n",
+      "File \u001b[1;32mP:\\Profil\\Anwendungsdaten\\Python\\Python313\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'testdata.txt'"
      ]
     }
    ],
@@ -850,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "f044c8e5-c7ea-4f28-bbe5-93099e819f00",
    "metadata": {},
    "outputs": [],
@@ -860,18 +837,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "d208f9f1-7c69-4c24-a597-a97c7d570095",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.24258865245042804\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(dRdT_mess)"
    ]
@@ -886,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "15d42ce7-280e-46d1-a418-522408533bf0",
    "metadata": {},
    "outputs": [],
@@ -1219,25 +1188,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de62e1d6-3415-4502-a85d-0f73c1545a63",
+   "cell_type": "markdown",
+   "id": "8dbc1fef-6972-433b-9209-26f177c61981",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 04.12-05.12 Calibration mit Grease und Substrates thermal conductivity messung"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "325bdccc-6c72-47a7-a774-a5b31b6cd31c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "224b7ef1-52e7-4e16-a967-ad4c228596f6",
+   "id": "ac8a882b-d18f-4ea7-9ea3-81c5292e18ba",
    "metadata": {},
    "outputs": [],
    "source": []
