Some data processed

--- a/main.ipynb
+++ b/main.ipynb
@@ -1641,7 +1641,7 @@
    "id": "3bee5c56-1139-46b1-8696-1c51b495cdab",
    "metadata": {},
    "source": [
-    "## Messung Thermal conductivity Air"
+    "## Messung Thermal conductivity Air (Verification)"
    ]
   },
   {
@@ -2167,14 +2167,6 @@
     "lambdaSample_mess=float(solSample[0])\n",
     "lambdaSample_mess"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0ad0ab9-3fec-4ac9-a98c-77c1ccf1cc24",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
